# mapyreduce

./: LICENSE  README.md  pyproject.toml
tests/: mapyreduce.py
